# load-calculation

./: Cargo.toml
.github/workflows/: release.yml
data/: equipmentInfo.csv
src/: main.rs
